feat(rank): warmer amber gold + on-disk preview helper (#30)
* test(rank): write preview PNGs to build/rank-preview/ during tests

Adds a writePreviewPngsToBuildDir test that drops five representative
rank cards (fresh / mid / near-levelup / long-name / no-avatar) into
build/rank-preview/ on every gradle test run. Lets a developer
iterating on colors, fonts, or layout see the output in any image
viewer immediately — no need to spin up the bot against a live Discord
guild for visual review.

The test asserts only that the files land on disk; visual review
remains by eye.

* chore(rank): warm accent gold from pure yellow to amber #FFB300

Pure HTML gold (#FFD700) was reading as bright lemon-yellow against the
darker banner art. #FFB300 (Material amber 600) shifts a touch toward
orange — the "rich golden yellow" feel the player asked for, without
slipping into pure orange territory. Same hex used for the avatar
ring, the LEVEL pill text, and the progress bar fill so all three
accents stay visually unified.

* style(rank): use Math.clamp and Optional.isPresent in RankCardRenderer

Replaces Math.max(0.0, Math.min(1.0, ...)) with the Java 21 Math.clamp
helper, and the null-sentinel cache pattern with explicit Optional
checks. Reverts ACCENT_GOLD to the original #FFD700 (HTML gold).

The cache field is now initialized to Optional.empty() so the first
loadBackground() call doesn't NPE on the new isPresent() check; the
underlying readBackgroundResource() still runs at most once per
process when the asset is on the classpath.

* chore(rank): set accent to deep gold #EFBF04

Pure HTML gold (#FFD700) read as bright highlighter yellow against the
banner art. #EFBF04 is a deeper, more saturated gold — the "rich" tone
the player landed on after iterating through previews.